# Core-COM

./: CMakeLists.txt  GenerateSolution.bat  README.md
extra/: CustomLib.h  appCoreCom.cpp  dllBasicServer.cpp  dllBasicServer.midl  dllInProcServer.cpp  exeOutProcServer.cpp  main.cpp
include/: comFramework.h
include/com/: Adapter.h  Annotations.h  Apartments.h  ApplicationTraits.h  AuthLevel.h  AuthService.h  Authorization.h  BStrAllocator.h  BasicString.h  BinaryString.h  Boolean.h  ClassFactory.h  ClassObject.h  CoClassTraits.h  ComApi.h  Concepts.h  Dispatch.h  EntryPoints.h  Exception.h  Function.h  GlobalRefCount.h  Guid.h  HResult.h  HeapAllocator.h  Implements.h  InitializeSentry.h  KnownGuidCollection.h  LibraryTraits.h  Location.h  NoopAllocator.h  Property.h  ServerLocation.h  SetLastError.h  SharedPtr.h  ThreadingModel.h  TokenAccess.h  TypeLibrary.h  Variant.h  Version.h
include/com/experimental/: Boundary.h
include/com/traits/: distinct_interfaces.h  interface_sequence.h
include/core/: CallAdapter.h  ConstantString.h  ThrowIfEmpty.h
include/meta/: Concepts.h  TagTypes.h  Tuple.h  TypeTraits.h
include/nstd/: OutPtr.h
include/nstd/experimental/: Satisfies.h
include/nt/: Exception.h  Function.h  NtStatus.h
include/win/: ApiHelpers.h  Boolean.h  ConstRegistryStringIterator.h  DWord.h  Exception.h  Function.h  LResult.h  RegistryApi.h  RegistryKey.h  RegistryValue.h  SharedLibrary.h  SmartHandle.h
sample/: appCoreCom.cpp  dllAttributes.cpp  dllAttributes.def  dllAttributes.midl  dllInProcServer.cpp  dllInProcServer.def  dllInProcServer.midl  dllOutProcProxy.def  exeOutProcServer.cpp  exeOutProcServer.midl
src/: Optimized.cc  PlatformSdk.h  comFramework.cpp  libBoost.h
src/com/: Apartments.cpp  BinaryString.cpp  Exception.cpp  Guid.cpp  KnownGuidCollection.cpp
src/win/: RegistryKey.cpp
test/: Optimized.cc
test/com/: BasicString_UnitTests.cpp  BinaryString_UnitTests.cpp  MockDispatch.h  MockUnknown.h  SharedPtr_UnitTests.cpp  Variant_UnitTests.cpp
